Bug 148897 - Image position not restored when pressing undo
Summary: Image position not restored when pressing undo
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.4 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
: 146022 (view as bug list)
Depends on:
Blocks: Undo-Redo Images
  Show dependency treegraph
 
Reported: 2022-05-02 18:57 UTC by Telesto
Modified: 2025-04-22 14:28 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (811.10 KB, application/vnd.oasis.opendocument.text)
2022-05-02 18:57 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-05-02 18:57:17 UTC
Description:
Image position not restored when pressing undo 

Steps to Reproduce:
1. Open the attached file
2. Delete the cat image on page 1
3. CTRL+Z. Cat on page 4 on page 3 and overlapping text

Actual Results:
Cat on different page and overlapping text

Expected Results:
Same as before undo


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.3.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 7b0aabe71d2455f6f643553a07f1056935cf190f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

still ok with
Version: 7.0.7.0.0+ (x64)
Build ID: 626ea4e62a3e5005fe9825923a1c0c5bdb61cc08
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2022-05-02 18:57:29 UTC
Created attachment 179891 [details]
Example file
Comment 2 raal 2022-05-02 20:34:38 UTC
Confirm Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 75fe4051320ef9b1f4323fa958e8df3db2066882
CPU threads: 4; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 3 raal 2022-05-02 20:49:12 UTC
This seems to have begun at the below commit.
Adding Cc: to Michael Stahl; Could you possibly take a look at this one?
Thanks
 5d567ba871944f677da30f8c99ec8b428bc09163 is the first bad commit
commit 5d567ba871944f677da30f8c99ec8b428bc09163
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Apr 19 18:15:49 2021 +0200

    source eb85de8e6b61fb3fcb6c03ae0145f7fe5478bccf

https://git.libreoffice.org/core/+/eb85de8e6b61fb3fcb6c03ae0145f7fe5478bccf
  sw: layout: if fly's anchor moves forward, move fly off SwPageFrame
Comment 4 Commit Notification 2023-05-24 20:29:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/35f7f1ad9c2aba1644a46dfb4da0a86f72c6a224

tdf#148897 sw: layout: force invalidate background when moving fly off page

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-05-24 20:29:54 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b0e2b60fa45f236f6a993cc1295a7afddabb5098

tdf#148897 tdf#143239 sw: move flys off the page in SwTextFrame::Format()

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2023-05-29 16:17:02 UTC
*** Bug 146022 has been marked as a duplicate of this bug. ***
Comment 7 BogdanB 2023-05-29 16:41:43 UTC
This bug is Resolved, or some things are still ongoing?
Comment 8 Michael Stahl 2023-05-30 09:20:49 UTC
let's hope it's fixed ... although the 2nd commit is highly likely to cause new regressions :-/