tdf#148897 sw: layout: force invalidate background when moving fly off page

The fly 15 moves forward in SwLayAction::FormatContent(), then back
again later, without being positioned on the next page, and it happens
to go to the same position that it originally had.

Then SwFlyNotify sees that the position is the same, and doesn't do any
invalidation of the background, so the fly overlaps a text frame.

When the fly is moved by the object positioning code (before the below
commit), it first gets a new position on the next page, and then moves
back, so all invalidations happen.

Force the invalidation of the background in this case.

(regression from commit eb85de8e6b61fb3fcb6c03ae0145f7fe5478bccf
 "sw: layout: if fly's anchor moves forward, move fly off SwPageFrame")

Change-Id: Ifdc9460defe7b1f37cbb05310906146919e8fb6a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152245
Tested-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>