sw/inc/anchoredobject.hxx
@@ -109,6 +109,8 @@ class SW_DLLPUBLIC SwAnchoredObject
         // page frame starts.
         bool mbTmpConsiderWrapInfluence;
 
+        bool mbForceNotifyNewBackground = false;
+
         mutable SwRect maObjRectWithSpaces;
         mutable bool mbObjRectWithSpacesValid;
         mutable SwRect maLastObjRect;
@@ -422,6 +424,9 @@ class SW_DLLPUBLIC SwAnchoredObject
         void SetTmpConsiderWrapInfluence( const bool _bTmpConsiderWrapInfluence );
         bool IsTmpConsiderWrapInfluence() const { return mbTmpConsiderWrapInfluence;}
         void ClearTmpConsiderWrapInfluence();
+
+        bool IsForceNotifyNewBackground() { return mbForceNotifyNewBackground; }
+        void SetForceNotifyNewBackground(bool const b) { mbForceNotifyNewBackground = b; }
 
         /** method to determine, if the anchored object is overlapping with a
             previous column
